--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,19 @@
 language: ruby
 rvm:
   - "1.9.3"
-  - "2.0.0"
-  - "2.1.0"
-  - rbx
+#  - "2.0.0"
+#  - "2.1.0"
+#  - rbx
 env:
-  - "PGVERSION=9.2.6-1-linux-x64 PATH=\"/opt/PostgreSQL/9.2/bin:$PATH\""
-  - "PGVERSION=8.4.19-1-linux-x64 PATH=\"/opt/PostgreSQL/8.4/bin:$PATH\""
+#  - "PGVERSION=9.2.6-1-linux-x64 PATH=\"/opt/PostgreSQL/9.2/bin:$PATH\""
+#  - "PGVERSION=8.4.19-1-linux-x64 PATH=\"/opt/PostgreSQL/8.4/bin:$PATH\""
   - "PGCROSS=true"
 matrix:
-  # Test cross compilation only with 2.1.0
+  # Test cross compilation only with 1.9.3
   exclude:
-    - rvm: 1.9.3
-      env: "PGCROSS=true"
     - rvm: 2.0.0
+      env: "PGCROSS=true"
+    - rvm: 2.1.0
       env: "PGCROSS=true"
     - rvm: rbx
       env: "PGCROSS=true"
